<resources>
    <string name="app_name">IntegratedHealth</string>
    <string name="action_settings">Settings</string>
    <string name="about">About</string>
    <string name="title_activity_general">GeneralActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="home">Home</string>
    <string name="general">General</string>
    <string name="fitness">Fitness</string>
    <string name="diet">Diet</string>
    <string name="progress_bar_label">Progress Bar</string>
    <string name="vegetarian_label">Vegetarian</string>
    <string name="keto_label">Keto</string>
    <string name="traditional_label">Traditional</string>
    <string name="vegan_label">Vegan</string>
    <string name="atkins_label">Atkins</string>
    <string name="custom_label">Custom</string>
    <string name="simple_label">Simple</string>
    <string name="verbose_label">Verbose</string>
    <string name="add_food_label_message">Add Food</string>
    <string name="food_label">Food Name</string>
    <string name="calories_label">Calories</string>
    <string name="macronutrients_label">Macronutrients</string>
    <string name="food_name_hint">Bread</string>
    <string name="calories_hint">150</string>
    <string name="protein_hint">9</string>
    <string name="carbs_hint">15</string>
    <string name="sugars_hint">10</string>
    <string name="fats_hint">10</string>
    <string name="carbs_label">Carbohydrates</string>
    <string name="protein_label">Protein</string>
    <string name="fats_label">Fats</string>
    <string name="sugars_label">Sugars</string>
    <string name="save_button_label">Save</string>
    <string name="cancel_button_label">Cancel</string>
    <string name="custom_macros_label">Custom Macronutrient Goals</string>
    <string name="protein_hint2">100</string>
    <string name="fats_hint2">50</string>
    <string name="carbs_hint2">200</string>
    <string name="sugars_hint2">20</string>
    <string name="recipes_label">Recipe</string>
    <string name="return_label">Return</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_fragment_viewer">FragmentViewer</string>
    <string name="title_activity_scenario_picker">ScenarioPicker</string>
    <string-array name="scenarios_array">
        <item>Fitness - Robert\'s Guided Workout</item>
        <item>Fitness - Dave\'s Body Building Aspirations</item>
        <item>Diet - Riley\'s Healthy Meal Plan</item>
        <item>Diet - Vanessa\'s Health Craze</item>
        <item>General - George\'s Lazy Physical</item>
        <item>General - Jimmy\'s Stressed Out!</item>
        <item>New User</item>
    </string-array>
    <string name="fitness_robert_title">Fitness - Robert\'s Guided Workout</string>
    <string name="fitness_dave_title">Fitness - Dave\'s Body Building Aspirations</string>
    <string name="diet_riley_title">Diet - Riley\'s Healthy Meal Plan</string>
    <string name="diet_vanessa_title">Diet - Vanessa\'s Health Craze</string>
    <string name="general_george_title">General - George\'s Lazy Checkup</string>
    <string name="general_jimmy_title">General - Jimmy\'s Stressed Out!</string>
    <string name="new_user_title">New User</string>
    <string name="fitness_robert">
        Robert has been going to the gym for a while, but he hasn\'t gotten any more buff.
        Whenever he goes, he randomly tries some weights and then leaves. He\'s looking for a guided
        workout that won\'t break the bank.
    </string>
    <string name="fitness_dave">
        Dave is an aspiring body builder who used to think that they key to bulking up was eating
        lots of food. He\'s been eating lots of food, but he feels like he hasn\'t been building
        muscle as quickly as some other body builders.
    </string>
    <string name="diet_riley">
        Riley wants to start eating healthy, but whenever she starts preparing food, she doesn\'t
        know what is healthy and what isn\'t. She fills in some data about her preferences and works
        with the recommendations offered.
    </string>
    <string name="diet_vanessa">
        Vanessa just got into a health craze and is all about eating healthy. She is overwhelmed
        by the food choices and wants a simple guide to eating a certain way.
    </string>
    <string name="general_george">
        George is interested in keeping track of his vitals, but he doesn\'t want to keep going
        to his primary care physician and waiting all the time. He wants the basics now!
    </string>
    <string name="general_jimmy">
        Jimmy gets stressed sometimes. He tries to workout and play sports to get rid of his stress,
        but sometimes those activities fall short and he is still stressed. He\'s found that
        listening to soothing music has done wonders to calm him down, but sometimes he is so
        stressed that opening up his phone, clicking on his music player, and then typing in a
        soothing song, and then selecting a song to listen to has stressed him out even more.
        So he tries this app. He knows there is a trigger to play soothing music and all he has
        to do is click yes when a notification senses he is stressed and the music will play.

    </string>
    <string name="new_user">
        A new user uses this app for the first time. The data fields will be empty and will populate
        when the devices and companion apps are connected for full functionality. The app will ask
        for specific details to fill in for the user to use the app fully.
    </string>
    <string name="heartrate_sync_message">
        Please sync your heartrate monitor with this app.
    </string>
    <string name="heartrate_sync_title">
        Sync heartrate device
    </string>
    <string name="hydration_sync_message">
        Please sync your hydratio monitor with this app.
    </string>
    <string name="hydration_sync_title">
        Sync hydration monitoring app
    </string>
    <string name="gut_sync_message">
        Please give StoolInspector access
    </string>
    <string name="gut_sync_title">
        StoolInspector Access
    </string>
    <string name="fire">
        fire
    </string>
    <string name="cancel">
        cancel
    </string>
    <string-array name="noobie1">
        <item>20.0 lbs                          20 reps</item>
        <item>25.0 lbs                          10 reps</item>
        <item>30.0 lbs                          5 reps</item>
    </string-array>
    <string-array name="noobie2">
        <item>45.0 lbs                          20 reps</item>
        <item>55.0 lbs                          10 reps</item>
        <item>70.0 lbs                          5 reps</item>
    </string-array>
    <string-array name="pro1">
        <item>50.0 lbs                          20 reps</item>
        <item>65.0 lbs                          10 reps</item>
        <item>70.0 lbs                          5 reps</item>
    </string-array>
    <string-array name="pro2">
        <item>135.0 lbs                          20 reps</item>
        <item>165.0 lbs                          10 reps</item>
        <item>180.0 lbs                          5 reps</item>
    </string-array>
    <string name="title_activity_scrolling_about">ScrollingAboutActivity</string>
</resources>