<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/custom_macros_label"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        />

    <TextView
        android:text="@string/carbs_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:inputType="number"
        android:id="@+id/custom_carbs_edittext"
        android:hint="@string/carbs_hint2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/fats_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/custom_fats_edittext"
        android:hint="@string/fats_hint2"
        android:inputType="number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/protein_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/custom_protein_edittext"
        android:hint="@string/protein_hint2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"/>

    <TextView
        android:text="@string/sugars_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:inputType="number"
        android:id="@+id/custom_sugars_edittext"
        android:hint="@string/sugars_hint2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/custom_save_button"
            android:text="@string/save_button_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/custom_cancel_button"
            android:text ="@string/cancel_button_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>



</LinearLayout>