<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--<ScrollView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent">-->
        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="vertical">-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/traditional_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.19"
                    android:textSize="8sp"
                    android:text="@string/traditional_label"/>
                <Button
                    android:id="@+id/vegetarian_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.18"
                    android:textSize="9sp"
                    android:text="@string/vegetarian_label"/>
                <Button
                    android:id="@+id/atkins_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:textSize="9sp"
                    android:text="@string/atkins_label"/>
                <Button
                    android:id="@+id/keto_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:textSize="9sp"
                    android:text="@string/keto_label"/>
                <Button
                    android:id="@+id/custom_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:textSize="9sp"
                    android:text="@string/custom_label"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/border"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="5sp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5sp"
                    android:layout_marginRight="5sp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.33"
                        android:textSize="15sp"
                        android:text="@string/progress_bar_label"
                        />
                    <TextView
                        android:id="@+id/verbose_textview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.25"
                        android:textSize="15sp"
                        android:gravity="right"
                        android:text="@string/simple_label"/>
                    <Switch
                        android:id="@+id/verbose_switch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.41"
                        android:layout_gravity="end"/>

                </LinearLayout>


                <ProgressBar
                    android:id="@+id/diet_progress_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:layout_marginLeft="5sp"
                    android:layout_marginRight="5sp"
                    android:progressDrawable="@drawable/greenprogress"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="5sp"
                    android:layout_marginRight="5sp">

                    <TextView
                        android:id="@+id/starting_weight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Starting: 150"
                        android:textSize="15sp"
                        android:layout_weight="0.33"
                        />

                    <TextView
                        android:id="@+id/current_weight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Current: 135"
                        android:textSize="15sp"
                        android:layout_weight="0.33"/>

                    <TextView
                        android:id="@+id/goal_weight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Goal: 130"
                        android:textSize="15sp"
                        />

                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Food Table"
                android:textSize="15sp"
                android:paddingTop="10sp"
                android:gravity="center"/>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"
                android:background="@drawable/border"
                android:layout_marginBottom="3sp"
                android:layout_marginLeft="3sp"
                android:layout_marginRight="3sp"
                android:fadeScrollbars="false"
                >

                <android.support.v4.widget.NestedScrollView
                    android:scrollbars="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TableLayout
                        android:id="@+id/food_table"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:stretchColumns="1"
                        android:layout_marginRight="5sp">



                    </TableLayout>
                </android.support.v4.widget.NestedScrollView>
            </ScrollView>
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="0sp"
                    android:layout_weight="0.1"
                    android:stretchColumns="1"
                    android:layout_marginLeft="3sp"
                    android:layout_marginRight="3sp"
                    android:background="@drawable/border">

                    <TableRow>
                        <TableRow>
                            <Button
                                android:id="@+id/food_table_add_row_button"
                                android:layout_width="30sp"
                                android:layout_height="30sp"
                                android:text="Add Food"
                                android:textSize="8sp"
                                android:background="@android:drawable/ic_menu_edit"
                                />
                            <Button
                                android:id="@+id/food_table_del_row_button"
                                android:layout_width="35sp"
                                android:layout_height="30sp"
                                android:text="Remove Food"
                                android:textSize="8sp"
                                android:background="@android:drawable/ic_menu_delete"
                                />
                            <Button
                                android:id="@+id/food_table_cancel_button"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Cancel"
                                android:textSize="8sp"
                                android:visibility="gone"
                                />
                        </TableRow>
                            <ScrollView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fadeScrollbars="false">
                            <LinearLayout
                                android:layout_height="wrap_content"
                                android:layout_width="match_parent"
                                android:orientation="vertical"
                                android:layout_marginRight="5sp">

                                <TextView
                                    android:id="@+id/total_calories"
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:text=""
                                    android:textSize="15sp"
                                    android:layout_gravity="end"
                                    android:gravity="end"/>
                                <TextView
                                    android:id="@+id/carbs_textview"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Carbs"
                                    android:layout_gravity="end"/>
                                <TextView
                                    android:id="@+id/fats_textview"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Fats"
                                    android:layout_gravity="end"/>
                                <TextView
                                    android:id="@+id/protein_textview"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Proteins"
                                    android:layout_gravity="end"/>
                                <TextView
                                    android:id="@+id/sugars_textview"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Sugars"
                                    android:layout_gravity="end"/>
                            </LinearLayout>
                        </ScrollView>
                    </TableRow>
            </TableLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Recommendations"
                android:textSize="15dp"
                android:gravity="center"
                android:layout_marginTop="10dp"
                />
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"
                android:background="@drawable/border"
                android:layout_marginBottom="60sp"
                android:layout_marginLeft="3sp"
                android:layout_marginRight="3sp"
                android:fadeScrollbars="false">

                <TableLayout
                    android:id="@+id/recommendations"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:stretchColumns="1"
                    >
                </TableLayout>
            </ScrollView>
        <!--</LinearLayout>-->
    <!--</ScrollView>-->

</LinearLayout>